Closed
Bug 1208593
Opened 10 years ago
Closed 10 years ago
Cannot build a non-DEBUG build of Firefox with the --enable-dump-painting option
Categories
(Firefox Build System :: General, defect)
Firefox Build System
General
Tracking
(firefox44 fixed)
RESOLVED
FIXED
mozilla44
| Tracking | Status | |
|---|---|---|
| firefox44 | --- | fixed |
People
(Reporter: mchang, Assigned: jfkthame)
References
Details
Attachments
(1 file)
When trying to build an optimized build on Windows, I get this compile error:
6:56.58 c:/Users/masonchang/Projects/gecko-dev/layout/generic/nsLineBox.cpp(254) : error C2039: 'DebugString' : is not a member of 'mozilla::WritingMode'
6:56.58 c:\Users\masonchang\Projects\gecko-dev\Opt32\dist\include\mozilla/WritingModes.h(155) : see declaration of 'mozilla::WritingMode'
6:56.60
6:56.60 In the directory /c/Users/masonchang/Projects/gecko-dev/Opt32/layout/generic
6:56.60 The following command failed to execute properly:
6:56.60 c:/Users/masonchang/Projects/gecko-dev/Opt32/_virtualenv/Scripts/python.exe -m mozbuild.action.cl cl -FoUnified_cpp_layout_generic2.obj -c -I../../dist/stl_wrappers -DWIN32_LEAN_AND_MEAN -D_WIN32 -DWIN32 -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -DOS_WIN=1 -D_UNICODE -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DUNICODE -D_WINDOWS -D_SECURE_ATL -DCOMPILER_MSVC -DSTATIC_EXPORTABLE_JS_API -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DAB_CD=en-US -DNO_NSPR_10_SUPPORT -Ic:/Users/masonchang/Projects/gecko-dev/layout/generic -I. -Ic:/Users/masonchang/Projects/gecko-dev/Opt32/ipc/ipdl/_ipdlheaders -Ic:/Users/masonchang/Projects/gecko-dev/ipc/chromium/src -Ic:/Users/masonchang/Projects/gecko-dev/ipc/glue -Ic:/Users/masonchang/Projects/gecko-dev/layout/generic/../../dom/plugins/base -Ic:/Users/masonchang/Projects/gecko-dev/layout/generic/../base -Ic:/Users/masonchang/Projects/gecko-dev/layout/generic/../forms -Ic:/Users/masonchang/Projects/gecko-dev/layout/generic/../style -Ic:/Users/masonchang/Projects/gecko-dev/layout/generic/../svg -Ic:/Users/masonchang/Projects/gecko-dev/layout/generic/../tables -Ic:/Users/masonchang/Projects/gecko-dev/layout/generic/../xul -Ic:/Users/masonchang/Projects/gecko-dev/dom/base -Ic:/Users/masonchang/Projects/gecko-dev/dom/html -Ic:/Users/masonchang/Projects/gecko-dev/dom/xul -I../../dist/include -Ic:/Users/masonchang/Projects/gecko-dev/Opt32/dist/include/nspr -Ic:/Users/masonchang/Projects/gecko-dev/Opt32/dist/include/nss -MD -FI ../../dist/include/mozilla-config.h -DMOZILLA_CLIENT -TP -nologo -D_HAS_EXCEPTIONS=0 -W3 -Gy -arch:IA32 -FS -wd4251 -wd4244 -wd4267 -wd4345 -wd4351 -wd4482 -wd4800 -wd4819 -we4553 -GR- -DNDEBUG -DTRIMMED -Zi -UDEBUG -DNDEBUG -O1 -Oi -Oy- -WX -Ic:/Users/masonchang/Projects/gecko-dev/Opt32/dist/include/cairo -Fdgenerated.pdb c:/Users/masonchang/Projects/gecko-dev/Opt32/layout/generic/Unified_cpp_layout_generic2.cpp
6:56.62 c:/Users/masonchang/Projects/gecko-dev/config/rules.mk:958: recipe for target 'Unified_cpp_layout_generic2.obj' failed
6:56.62 mozmake.EXE[5]: *** [Unified_cpp_layout_generic2.obj] Error 1
6:56.62 mozmake.EXE[5]: *** Waiting for unfinished jobs....
It looks like bug 1193488 broke it.
| Reporter | ||
Updated•10 years ago
|
Flags: needinfo?(jkew)
| Reporter | ||
Updated•10 years ago
|
Flags: needinfo?(jkew) → needinfo?(jfkthame)
| Assignee | ||
Comment 1•10 years ago
|
||
Oops... yes, it'll break if you have DEBUG_FRAME_DUMP defined, but are not building with DEBUG. Sorry about that; I didn't notice there was any non-DEBUG code that would try to use this.
It looks like you'll encounter this if you build with --enable-dump-painting; presumably that's why you've run into it, while default builds don't.
Feel free to post a patch if you wish, or I'll try to find time tomorrow.
Flags: needinfo?(jfkthame)
| Assignee | ||
Comment 2•10 years ago
|
||
I believe this should fix it for you.
Attachment #8666332 -
Flags: review?(mchang)
| Assignee | ||
Updated•10 years ago
|
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
| Assignee | ||
Updated•10 years ago
|
OS: Windows 7 → All
Hardware: x86_64 → All
Summary: Cannot build an optimized build of Firefox on Windows 7 and 10 → Cannot build a non-DEBUG build of Firefox with the --enable-dump-painting option
| Reporter | ||
Comment 3•10 years ago
|
||
Comment on attachment 8666332 [details] [diff] [review]
Make the WritingMode::DebugString() method available even in non-DEBUG compilation (needed by --enable-dump-painting builds, for example)
Review of attachment 8666332 [details] [diff] [review]:
-----------------------------------------------------------------
Thanks!
Attachment #8666332 -
Flags: review?(mchang) → review+
| Assignee | ||
Comment 5•10 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/9f4c7aae16b1f7f6b60fe403ec334d7413a472e6
Bug 1208593 - Make the WritingMode::DebugString() method available even in non-DEBUG compilation (needed by --enable-dump-painting builds, for example). r=mchang
Comment 6•10 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
status-firefox44:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
Updated•8 years ago
|
Product: Core → Firefox Build System
You need to log in
before you can comment on or make changes to this bug.
Description
•